[package]
authors     = [ "t3rn ltd. <team@t3rn.io>" ]
description = "A crate that hosts a common definitions that are relevant for the all t3rn pallets."
edition     = "2018"
homepage    = "https://t3rn.io"
license     = "Apache-2.0"
name        = "t3rn-primitives"
repository  = "https://github.com/t3rn/t3rn/"
version     = "1.0.0-alpha.1"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
tiny-keccak           = { version = "2.0.0", features = ["keccak"], default-features = false }
libsecp256k1          = { version = "0.7", default-features = false }
bytes                 = { version = "1.2.1", default-features = false }
# This crate should not rely on any of the frame primitives.
codec                 = { package = "parity-scale-codec", version = "3", default-features = false, features = [ "derive" ] }
ed25519-dalek         = { version = "1.0", default-features = false, features = [ "u64_backend" ] }
frame-support         = { default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27' }
frame-system          = { default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27' }
log                   = { version = "0.4", default-features = false }
pallet-sudo           = { default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27' }
scale-info            = { version = "2.7.0", default-features = false, features = [ "derive" ] }
serde                 = { default-features = false, version = "1.0", optional = true }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false }
sp-core               = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false }
sp-io                 = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false }
sp-runtime            = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false }
sp-std                = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false }
sp-version            = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false }

#bridges
finality-grandpa    = { version = "0.16", default-features = false }
hash-db             = { version = "0.15.2", default-features = false }
num-traits          = { version = "0.2", default-features = false }
sp-api              = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false, branch = 'polkadot-v0.9.27' }
sp-state-machine    = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false }
sp-trie             = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false }

t3rn-abi            = { path = "../types/abi", default-features = false, features = [ "runtime" ] }
t3rn-sdk-primitives = { version = "=0.1.1-rc.5", default-features = false }
t3rn-types          = { path = "../types", default-features = false, features = [ "runtime" ] }

[dev-dependencies]
hex         = "0.4"
hex-literal = { version = '0.3.1' }
serde_json  = "1.0.41"

[features]
default = [ "std" ]
std = [
  "bytes/std",
  "ed25519-dalek/std",
  "libsecp256k1/std",
  "log/std",
  "scale-info/std",
  "serde/std",
  "codec/std",
  "sp-api/std",
  "sp-application-crypto/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-core/std",
  "sp-version/std",
  "sp-io/std",
  "pallet-sudo/std",
  "frame-system/std",
  "frame-support/std",
  #bridges
  "hash-db/std",
  "num-traits/std",
  "sp-state-machine/std",
  "sp-trie/std",
  "sp-finality-grandpa/std",
  "t3rn-sdk-primitives/std",
  "t3rn-types/std",
  "t3rn-abi/std",
  "t3rn-types/runtime-std",
  "finality-grandpa/std",
]
