[package]
authors     = { workspace = true }
description = "A crate that hosts a common definitions that are relevant for the all t3rn pallets."
edition     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
name        = "t3rn-primitives"
repository  = { workspace = true }
version     = { workspace = true }

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
bytes        = { version = "1.2.1", default-features = false }
libsecp256k1 = { version = "0.7.1", features = [ "static-context" ], default-features = false }
tiny-keccak  = { version = "2.0.0", features = [ "keccak" ], default-features = false }

# This crate should not rely on any of the frame primitives.
codec                 = { workspace = true, package = "parity-scale-codec" }
ed25519-dalek         = { workspace = true }
frame-support         = { workspace = true }
frame-system          = { workspace = true }
log                   = { workspace = true }
pallet-sudo           = { workspace = true }
scale-info            = { workspace = true }
serde                 = { default-features = false, version = "1.0", optional = true }
sp-application-crypto = { workspace = true }
sp-core               = { workspace = true }
sp-io                 = { workspace = true }
sp-runtime            = { workspace = true }
sp-std                = { workspace = true }
sp-version            = { workspace = true }

#bridges
finality-grandpa    = { version = "0.16", default-features = false }
hash-db             = { version = "0.15.2", default-features = false }
num-traits          = { workspace = true }
sp-api              = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-state-machine    = { workspace = true }
sp-trie             = { workspace = true }

t3rn-abi            = { path = "../types/abi", default-features = false, features = [ "runtime" ] }
t3rn-sdk-primitives = { workspace = true }
t3rn-types          = { path = "../types", default-features = false, features = [ "runtime" ] }

circuit-runtime-types = { path = "../runtime/common-types", default-features = false }

[dev-dependencies]
hex         = "0.4"
hex-literal = { version = '0.3.1' }
serde_json  = "1.0.41"
mini-mock =  { path = "../runtime/mini-mock", package = "t3rn-mini-mock-runtime" }

[features]
default = [ "std" ]
std = [
  "bytes/std",
  "ed25519-dalek/std",
  "libsecp256k1/std",
  "log/std",
  "scale-info/std",
  "serde/std",
  "codec/std",
  "sp-api/std",
  "sp-application-crypto/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-core/std",
  "sp-version/std",
  "sp-io/std",
  "pallet-sudo/std",
  "frame-system/std",
  "frame-support/std",
  #bridges
  "hash-db/std",
  "num-traits/std",
  "sp-state-machine/std",
  "sp-trie/std",
  "sp-consensus-grandpa/std",
  "t3rn-sdk-primitives/std",
  "t3rn-types/std",
  "t3rn-abi/std",
  "circuit-runtime-types/std",
  "t3rn-types/runtime-std",
  "finality-grandpa/std",
]
