[package]
name = "t3rn-protocol"
version = "1.0.0-alpha.0"
authors = ["t3rn Ltd <team@t3rn.io>"]
edition = "2018"
homepage = "https://t3rn.io"
license = "Apache 2.0"
repository = "https://github.com/t3rn/t3rn/"
description = "A crate that implements the re-usable elements of t3rn protocol for composable cross-chain execution."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex-literal = { version = '0.3.1' }
hex = { version = "0.4.3", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

# This crate should not rely on any of the frame primitives.
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.13', default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.13', default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.13', default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.13', default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.13', default-features = false }
sp-keystore = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.13', optional = true }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.13' }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.13' }
frame-metadata = { version = "14.0.0", features = ["v13", "v14"], default-features = false }
ethabi-decode = { git = "https://github.com/Snowfork/ethabi-decode.git", branch = "master", default-features = false }

pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.13' }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.13' }
t3rn-primitives = { package = "t3rn-primitives", version = "1.0.0-alpha.0", default-features = false, path = "../primitives" }

sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.13' }

snowbridge-core = { git = "https://github.com/t3rn/snowbridge", branch = "polkadot-v0.9.13", default-features = false }
snowbridge-ethereum = { git = "https://github.com/t3rn/snowbridge", branch = "polkadot-v0.9.13", default-features = false }

hash-db = { version = "0.15.2", default-features = false }
triehash = { version = "0.8.2", default-features = false }
plain_hasher = { version = "0.2.2", default-features = false }

[dev-dependencies]
serde_json = "1.0.59"

[features]
default = ["std"]
std = [
    "serde/std",
    "codec/std",
    "hex/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "sp-version/std",
    "sp-io/std",
    "sp-keystore/std",
    "pallet-sudo/std",
    "pallet-balances/std",
    "frame-system/std",
    "frame-support/std",
    "frame-metadata/std",
    "t3rn-primitives/std",
    "sp-application-crypto/std",
    "hash-db/std",
    "triehash/std",
    "plain_hasher/std",
    "ethabi-decode/std",
    "snowbridge-core/std",
    "snowbridge-ethereum/std"
]
